--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -38,5 +38,41 @@ jobs:
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to container registry
+      uses: docker/login-action@v1
+      with:
+        registry: https://index.docker.io/v1/
+        username: ${{ secrets.AzureAppService_ContainerUsername_c54172b6bad04613ae2cb1508d9f7fdd }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_968f6562fdb04dfb894fb64fc253ce89 }}
+
+    - name: Build and push container image to registry
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_c54172b6bad04613ae2cb1508d9f7fdd }}/williambreda/api-pags:${{ github.sha }}
+        file: ./Dockerfile
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'API-pags'
+          slot-name: 'production'
+          publish-profile: ${{ secrets.AzureAppService_PublishProfile_6a5a69615b684968a0138c089850c46e }}
+          images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_c54172b6bad04613ae2cb1508d9f7fdd }}/williambreda/api-pags:${{ github.sha }}'
+
       
 
