Added azure deploy

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -46,8 +46,8 @@ jobs:
       uses: docker/login-action@v1
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_c54172b6bad04613ae2cb1508d9f7fdd }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_968f6562fdb04dfb894fb64fc253ce89 }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v2
