--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Log in to container registry
       uses: docker/login-action@v1
       with:
-        registry: https://index.docker.io/v1/
+        registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -54,7 +54,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_c54172b6bad04613ae2cb1508d9f7fdd }}/williambreda/api-pags:${{ github.sha }}
+        tags: docker.io/${{ secrets.AzureAppService_ContainerUsername_c54172b6bad04613ae2cb1508d9f7fdd }}/williambreda/api-pags:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -72,7 +72,7 @@ jobs:
           app-name: 'API-pags'
           slot-name: 'production'
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_6a5a69615b684968a0138c089850c46e }}
-          images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_c54172b6bad04613ae2cb1508d9f7fdd }}/williambreda/api-pags:${{ github.sha }}'
+          images: 'docker.io/${{ secrets.AzureAppService_ContainerUsername_c54172b6bad04613ae2cb1508d9f7fdd }}/williambreda/api-pags:${{ github.sha }}'
 
       
 
