--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -54,7 +54,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: docker.io/${{ secrets.DOCKER_USERNAME }}/williambreda/api-pags:${{ github.sha }}
+        tags: docker.io/williambreda/api-pags:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
