--- a/.github/workflows/main_API-pags.yml
+++ b/.github/workflows/main_API-pags.yml
@@ -12,22 +12,9 @@ on:
 jobs:
   build:
     runs-on: 'ubuntu-latest'
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
-
-    - name: Build with Maven
-      run: mvn clean install
+    - uses: actions/checkout@v2
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -35,16 +22,15 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v1
       with:
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        registry: https://index.docker.io/v1/
+        username: ${{ secrets.AzureAppService_ContainerUsername_70bb21532b724b529706301125987653 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_a944d245a218499492e95d403c7c5ce8 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v2
       with:
-        context: .
         push: true
-        tags: docker.io/williambreda/api-pags:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_70bb21532b724b529706301125987653 }}/williambreda/docker.io/williambreda/williambreda/api-pags:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -61,5 +47,5 @@ jobs:
       with:
         app-name: 'API-pags'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_15d3113aeffb4aaba42735af3689045b }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_bfc5183be52847618318bfb338dfda02 }}/docker.io/williambreda/williambreda/api-pags:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_5576e1fa271b4a7288c2e9ff0376e76b }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_70bb21532b724b529706301125987653 }}/williambreda/docker.io/williambreda/williambreda/api-pags:${{ github.sha }}'
