--- a/.github/workflows/main_API-pags.yml
+++ b/.github/workflows/main_API-pags.yml
@@ -63,3 +63,11 @@ jobs:
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_15d3113aeffb4aaba42735af3689045b }}
         images: 'index.docker.io/williambreda/api-pags:${{ github.sha }}'
+
+  test:
+    runs-on: 'ubuntu-latest'
+    needs: deploy
+
+    steps:
+      - name: Build with Maven
+        run: mvn test
