--- a/.github/workflows/main_API-pags.yml
+++ b/.github/workflows/main_API-pags.yml
@@ -27,7 +27,7 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
-      run: mvn clean install
+      run: mvn clean
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -69,6 +69,11 @@ jobs:
     needs: deploy
 
     steps:
-      - name: Build with Maven
-        run: mvn test
+      - name: Test with Maven
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
+          run: mvn test
 
