--- a/.github/workflows/main_API-pags.yml
+++ b/.github/workflows/main_API-pags.yml
@@ -26,8 +26,15 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
+    - name: Cache the Maven packages to speed up build
+    - uses: actions/cache@v1
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+
     - name: Build with Maven
-      run: mvn clean
+      run: mvn clean install -DskipTest
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -69,11 +76,7 @@ jobs:
     needs: deploy
 
     steps:
+      - uses: actions/checkout@v3
       - name: Test with Maven
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          settings-path: ${{ github.workspace }} # location for the settings.xml file
-          run: mvn test
+        run: mvn -B package --file pom.xml
 
