--- a/.github/workflows/main_API-pags.yml
+++ b/.github/workflows/main_API-pags.yml
@@ -26,9 +26,15 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
+    - uses: actions/cache@v1
+    - name: Cache the Maven packages to speed up build
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
 
     - name: Build with Maven
-      run: mvn clean install -DskipTest
+      run: mvn clean install -Dmaven.test.skip=true
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
@@ -65,5 +71,12 @@ jobs:
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_15d3113aeffb4aaba42735af3689045b }}
         images: 'index.docker.io/williambreda/api-pags:${{ github.sha }}'
 
+  test:
+    runs-on: 'ubuntu-latest'
+    needs: deploy
 
+    steps:
+      - name: Test with Maven
+        uses: actions/checkout@v3
+        run: mvn -B package --file pom.xml
 
