--- a/.github/workflows/main_API-pags.yml
+++ b/.github/workflows/main_API-pags.yml
@@ -10,57 +10,12 @@ on:
 
 
 jobs:
-  build:
+
+  tests:
     runs-on: 'ubuntu-latest'
-    permissions:
-      contents: read
-      packages: write
+    needs: deploy
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
-      with:
-        java-version: '8'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
-
-    - name: Build with Maven
-      run: mvn clean install -Dmaven.test.skip=true
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Log in to registry
-      uses: docker/login-action@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: docker.io/williambreda/api-pags:${{ github.sha }}
-        file: ./Dockerfile
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'API-pags'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_15d3113aeffb4aaba42735af3689045b }}
-        images: 'index.docker.io/williambreda/api-pags:${{ github.sha }}'
-
+      - name: Test with Maven
+        uses: actions/checkout@v3
+        run: mvn -B package --file pom.xml
