--- a/.github/workflows/main_API-pags.yml
+++ b/.github/workflows/main_API-pags.yml
@@ -16,4 +16,10 @@ jobs:
 
     steps:
       - name: Test with Maven
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
+
         run: mvn test
