--- a/.github/workflows/main_API-pags.yml
+++ b/.github/workflows/main_API-pags.yml
@@ -66,6 +66,7 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
+    needs: deploy
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
