--- a/.github/workflows/main_API-pags.yml
+++ b/.github/workflows/main_API-pags.yml
@@ -64,16 +64,16 @@ jobs:
           publish-profile: ${{ secrets.AzureAppService_PublishProfile_15d3113aeffb4aaba42735af3689045b }}
           images: 'index.docker.io/williambreda/api-pags:${{ github.sha }}'
 
-  tests:
+  test:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
-      - name: Set up JDK 14
+      - name: Set up JDK 8
         uses: actions/setup-java@v1
         with:
-          java-version: 14
+          java-version: 8
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -82,3 +82,30 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
+        continue-on-error: true
+
+      - name: Allure Reports
+        uses: actions/checkout@v3
+        if: always()
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        if: always()
+        id: allure-report
+        with:
+          allure_results: target/allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v2
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: allure-history
