Added allure reports

--- a/.github/workflows/main_API-pags.yml
+++ b/.github/workflows/main_API-pags.yml
@@ -98,9 +98,9 @@ jobs:
         if: always()
         id: allure-report
         with:
-          allure_results: target/allure-results
+          allure_results: allure-results
           gh_pages: gh-pages
-          allure_report: target/allure-report
+          allure_report: allure-report
           allure_history: allure-history
 
       - name: Deploy report to Github Pages
